@@ -964,18 +964,18 @@ size=12
 face=Arial
 
 [infopopup.title.font]
-r=255
-g=255
-b=255
+r=0
+g=0
+b=0
 bold=1
 italic=0
 size=12
 face=Arial
 
 [infopopup.text.font]
-r=255
-g=255
-b=255
+r=30
+g=30
+b=30
 bold=0
 italic=0
 size=9
